--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,11 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/components/server/ERP/Client/Clients.js"
+  ],
   "exclude": ["node_modules"]
 }
