--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.1.0",
     "typescript": "4.9.5",
     "uuid": "^9.0.0"
   },
