--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "18.2.0",
     "swr": "^2.1.0",
     "typescript": "4.9.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "react-cookie": "^4.1.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.1"
